added tests for problem 4

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -35,7 +35,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
+   "id": "8cddc288",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "ea303b3e",
    "metadata": {},
    "outputs": [],
@@ -48,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "7308bdba",
    "metadata": {},
    "outputs": [],
@@ -262,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "55444694",
    "metadata": {},
    "outputs": [
@@ -304,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "1c6a4070",
    "metadata": {},
    "outputs": [
@@ -352,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "cebc27f3",
    "metadata": {},
    "outputs": [
@@ -410,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "7185c87a",
    "metadata": {},
    "outputs": [
@@ -456,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "9aedf282",
    "metadata": {},
    "outputs": [
@@ -502,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "8efc88b1",
    "metadata": {},
    "outputs": [
@@ -548,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "9606eb9e",
    "metadata": {},
    "outputs": [
@@ -644,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "4f56ab7c",
    "metadata": {},
    "outputs": [
@@ -984,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "f02cba7a",
    "metadata": {},
    "outputs": [],
@@ -1072,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "f43a195e",
    "metadata": {},
    "outputs": [
@@ -1225,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "4da5b1b4",
    "metadata": {},
    "outputs": [
@@ -1311,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "b23bd19a",
    "metadata": {},
    "outputs": [
@@ -1405,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "3394ebe0",
    "metadata": {},
    "outputs": [
@@ -1467,6 +1475,157 @@
     "###Testing SHA-256 Implementation\n",
     "\n",
     "We test the complete SHA-256 implementation using known test vectors from FIPS 180-4 and other official sources. These tests verify that our implementation produces identical results to the standard SHA-256 algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "35995584",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "Testing SHA-256 Implementation with Known Test Vectors\n",
+      "======================================================================\n",
+      "\n",
+      "--- Test 1: Empty string ---\n",
+      "Message: b''\n",
+      "Calculated: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855\n",
+      "Expected:   e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855\n",
+      "Match: ✓ PASS\n",
+      "\n",
+      "--- Test 2: 'abc' ---\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Message: b'abc'\n",
+      "Calculated: ba7816bf8f01cfea414140de5dae2223b00361a396177a9cb410ff61f20015ad\n",
+      "Expected:   ba7816bf8f01cfea414140de5dae2223b00361a396177a9cb410ff61f20015ad\n",
+      "Match: ✓ PASS\n",
+      "\n",
+      "--- Test 3: Long alphabetic string ---\n",
+      "Message: b'abcdbcdecdefdefgefghfghighijhijkijkljklmklmnlmnomnopnopq'\n",
+      "Calculated: 248d6a61d20638b8e5c026930c3e6039a33ce45964ff2167f6ecedd419db06c1\n",
+      "Expected:   248d6a61d20638b8e5c026930c3e6039a33ce45964ff2167f6ecedd419db06c1\n",
+      "Match: ✓ PASS\n",
+      "\n",
+      "--- Test 4: 'The quick brown fox...' ---\n",
+      "Message: b'The quick brown fox jumps over the lazy dog'\n",
+      "Calculated: d7a8fbb307d7809469ca9abcb0082e4f8d5651e46d3cdb762d02d0bf37c9e592\n",
+      "Expected:   d7a8fbb307d7809469ca9abcb0082e4f8d5651e46d3cdb762d02d0bf37c9e592\n",
+      "Match: ✓ PASS\n",
+      "\n",
+      "--- Test 5: Single character 'a' ---\n",
+      "Message: b'a'\n",
+      "Calculated: ca978112ca1bbdcafac231b39a23dc4da786eff8147c4e72b9807785afee48bb\n",
+      "Expected:   ca978112ca1bbdcafac231b39a23dc4da786eff8147c4e72b9807785afee48bb\n",
+      "Match: ✓ PASS\n",
+      "\n",
+      "======================================================================\n",
+      "SHA-256 Implementation Testing Complete!\n",
+      "======================================================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2067/1849051005.py:33: RuntimeWarning: overflow encountered in scalar add\n",
+      "  W.append(np.uint32(s1 + W[i-7] + s0 + W[i-16]))\n",
+      "/tmp/ipykernel_2067/1849051005.py:41: RuntimeWarning: overflow encountered in scalar add\n",
+      "  T1 = np.uint32(h + Sigma1(e) + Ch(e, f, g) + K[t] + W[t])\n",
+      "/tmp/ipykernel_2067/1849051005.py:44: RuntimeWarning: overflow encountered in scalar add\n",
+      "  T2 = np.uint32(Sigma0(a) + Maj(a, b, c))\n",
+      "/tmp/ipykernel_2067/1849051005.py:50: RuntimeWarning: overflow encountered in scalar add\n",
+      "  e = np.uint32(d + T1)\n",
+      "/tmp/ipykernel_2067/1849051005.py:54: RuntimeWarning: overflow encountered in scalar add\n",
+      "  a = np.uint32(T1 + T2)\n",
+      "/tmp/ipykernel_2067/1849051005.py:60: RuntimeWarning: overflow encountered in scalar add\n",
+      "  np.uint32(current[1] + b),\n",
+      "/tmp/ipykernel_2067/1849051005.py:62: RuntimeWarning: overflow encountered in scalar add\n",
+      "  np.uint32(current[3] + d),\n",
+      "/tmp/ipykernel_2067/1849051005.py:63: RuntimeWarning: overflow encountered in scalar add\n",
+      "  np.uint32(current[4] + e),\n",
+      "/tmp/ipykernel_2067/1849051005.py:64: RuntimeWarning: overflow encountered in scalar add\n",
+      "  np.uint32(current[5] + f),\n",
+      "/tmp/ipykernel_2067/1849051005.py:61: RuntimeWarning: overflow encountered in scalar add\n",
+      "  np.uint32(current[2] + c),\n",
+      "/tmp/ipykernel_2067/1849051005.py:59: RuntimeWarning: overflow encountered in scalar add\n",
+      "  np.uint32(current[0] + a),\n",
+      "/tmp/ipykernel_2067/1849051005.py:66: RuntimeWarning: overflow encountered in scalar add\n",
+      "  np.uint32(current[7] + h),\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ----------------------------------------------------------------------------\n",
+    "# STEP 4: Testing SHA-256 with Known Test Vectors\n",
+    "# ----------------------------------------------------------------------------\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 70)\n",
+    "print(\"Testing SHA-256 Implementation with Known Test Vectors\")\n",
+    "print(\"=\" * 70)\n",
+    "\n",
+    "# Test 1: Empty string\n",
+    "print(\"\\n--- Test 1: Empty string ---\")\n",
+    "msg = b\"\"\n",
+    "result = sha256(msg)\n",
+    "expected = \"e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855\"\n",
+    "print(f\"Message: {repr(msg)}\")\n",
+    "print(f\"Calculated: {result.hex()}\")\n",
+    "print(f\"Expected:   {expected}\")\n",
+    "print(f\"Match: {'✓ PASS' if result.hex() == expected else '✗ FAIL'}\")\n",
+    "\n",
+    "# Test 2: \"abc\"\n",
+    "print(\"\\n--- Test 2: 'abc' ---\")\n",
+    "msg = b\"abc\"\n",
+    "result = sha256(msg)\n",
+    "expected = \"ba7816bf8f01cfea414140de5dae2223b00361a396177a9cb410ff61f20015ad\"\n",
+    "print(f\"Message: {repr(msg)}\")\n",
+    "print(f\"Calculated: {result.hex()}\")\n",
+    "print(f\"Expected:   {expected}\")\n",
+    "print(f\"Match: {'✓ PASS' if result.hex() == expected else '✗ FAIL'}\")\n",
+    "\n",
+    "# Test 3: \"abcdbcdecdefdefgefghfghighijhijkijkljklmklmnlmnomnopnopq\"\n",
+    "print(\"\\n--- Test 3: Long alphabetic string ---\")\n",
+    "msg = b\"abcdbcdecdefdefgefghfghighijhijkijkljklmklmnlmnomnopnopq\"\n",
+    "result = sha256(msg)\n",
+    "expected = \"248d6a61d20638b8e5c026930c3e6039a33ce45964ff2167f6ecedd419db06c1\"\n",
+    "print(f\"Message: {repr(msg)}\")\n",
+    "print(f\"Calculated: {result.hex()}\")\n",
+    "print(f\"Expected:   {expected}\")\n",
+    "print(f\"Match: {'✓ PASS' if result.hex() == expected else '✗ FAIL'}\")\n",
+    "\n",
+    "# Test 4: \"The quick brown fox jumps over the lazy dog\"\n",
+    "print(\"\\n--- Test 4: 'The quick brown fox...' ---\")\n",
+    "msg = b\"The quick brown fox jumps over the lazy dog\"\n",
+    "result = sha256(msg)\n",
+    "expected = \"d7a8fbb307d7809469ca9abcb0082e4f8d5651e46d3cdb762d02d0bf37c9e592\"\n",
+    "print(f\"Message: {repr(msg)}\")\n",
+    "print(f\"Calculated: {result.hex()}\")\n",
+    "print(f\"Expected:   {expected}\")\n",
+    "print(f\"Match: {'✓ PASS' if result.hex() == expected else '✗ FAIL'}\")\n",
+    "\n",
+    "# Test 5: Single character \"a\"\n",
+    "print(\"\\n--- Test 5: Single character 'a' ---\")\n",
+    "msg = b\"a\"\n",
+    "result = sha256(msg)\n",
+    "expected = \"ca978112ca1bbdcafac231b39a23dc4da786eff8147c4e72b9807785afee48bb\"\n",
+    "print(f\"Message: {repr(msg)}\")\n",
+    "print(f\"Calculated: {result.hex()}\")\n",
+    "print(f\"Expected:   {expected}\")\n",
+    "print(f\"Match: {'✓ PASS' if result.hex() == expected else '✗ FAIL'}\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 70)\n",
+    "print(\"SHA-256 Implementation Testing Complete!\")\n",
+    "print(\"=\" * 70)"
    ]
   }
  ],
