Conclusion for problem 4

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -1627,6 +1627,15 @@
     "print(\"SHA-256 Implementation Testing Complete!\")\n",
     "print(\"=\" * 70)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf6cefa9",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "Problem 4 brings everything together into a SHA-256 implementation. The hash compression function takes the bitwise operations we built in problem 1 , applies the constants we calculated in problem 2 , and processes the padded message blocks from problem 3 . Each message block goes through 64 rounds of mixing using temporary variables and the working variables a through h, with each round thoroughly scrambling the data. We tested the implementaion against five official test vectors, and every single one matched perfectly with empty strings, shorts messages and longer inputs all produced the correct SHA-256 hashes. The overflow warnings that appear are actually normal for SHA-256 since its deliberately uses modul 2*3*2 arithmitic , meaning numbers wrap around at 32 bits by design. With a fully working SHA-256 implementation verified against standard test cases, we can now use it to crack password hashes in Problem 5"
+   ]
   }
  ],
  "metadata": {
