--- a/problems.ipynb
+++ b/problems.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "ea303b3e",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "7308bdba",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "55444694",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "1c6a4070",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "cebc27f3",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "7185c87a",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "9aedf282",
    "metadata": {},
    "outputs": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "8efc88b1",
    "metadata": {},
    "outputs": [
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "9606eb9e",
    "metadata": {},
    "outputs": [
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "4f56ab7c",
    "metadata": {},
    "outputs": [
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "f02cba7a",
    "metadata": {},
    "outputs": [],
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "f43a195e",
    "metadata": {},
    "outputs": [
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "4da5b1b4",
    "metadata": {},
    "outputs": [
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "b23bd19a",
    "metadata": {},
    "outputs": [
@@ -1413,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "3394ebe0",
    "metadata": {},
    "outputs": [
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "id": "35995584",
    "metadata": {},
    "outputs": [
@@ -1498,13 +1498,7 @@
       "Expected:   e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855\n",
       "Match: ✓ PASS\n",
       "\n",
-      "--- Test 2: 'abc' ---\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "--- Test 2: 'abc' ---\n",
       "Message: b'abc'\n",
       "Calculated: ba7816bf8f01cfea414140de5dae2223b00361a396177a9cb410ff61f20015ad\n",
       "Expected:   ba7816bf8f01cfea414140de5dae2223b00361a396177a9cb410ff61f20015ad\n",
@@ -1635,6 +1629,41 @@
    "source": [
     "### Conclusion\n",
     "Problem 4 brings everything together into a SHA-256 implementation. The hash compression function takes the bitwise operations we built in problem 1 , applies the constants we calculated in problem 2 , and processes the padded message blocks from problem 3 . Each message block goes through 64 rounds of mixing using temporary variables and the working variables a through h, with each round thoroughly scrambling the data. We tested the implementaion against five official test vectors, and every single one matched perfectly with empty strings, shorts messages and longer inputs all produced the correct SHA-256 hashes. The overflow warnings that appear are actually normal for SHA-256 since its deliberately uses modul 2*3*2 arithmitic , meaning numbers wrap around at 32 bits by design. With a fully working SHA-256 implementation verified against standard test cases, we can now use it to crack password hashes in Problem 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1aaeefd8",
+   "metadata": {},
+   "source": [
+    "## Problem 5: Passwords\n",
+    "\n",
+    "### Introduction\n",
+    "\n",
+    "This problem demonstrates the vulnerability of unsalted password hashes through a practical password cracking exercise. Given three SHA-256 hashes of common passwords, the task is to determine the original passwords and explain the attack methodology. While SHA-256 is cryptographically secure as a hash function, using it alone for password storage is insufficient because common passwords can be cracked through dictionary attacks, rainbow tables, or brute force attempts. This problem illustrates why real-world password storage requires additional protections like salting (adding random data before hashing) and key derivation functions (like bcrypt, scrypt, or Argon2) that are intentionally slow to compute.\n",
+    "\n",
+    "### Solution Approach\n",
+    "\n",
+    "The solution uses a dictionary attack approach by testing common passwords against the given hashes. Since the passwords are described as \"common,\" they likely appear in standard password lists or dictionaries. For each candidate password, we encode it as UTF-8 bytes, compute its SHA-256 hash using our implementation from Problem 4, and compare against the target hashes. This demonstrates how attackers can efficiently crack weak passwords even when hashed with strong algorithms. After identifying the passwords, we analyze why this attack succeeded and propose proper password hashing techniques including  using purpose-built password hashing functions with adjustable work factors.\n",
+    "\n",
+    "### References\n",
+    "\n",
+    "**FIPS 180-4: Secure Hash Standard**\n",
+    "- National Institute of Standards and Technology (NIST)\n",
+    "- URL: https://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.180-4.pdf\n",
+    "- Relevance: Specification for SHA-256 used to hash the passwords.\n",
+    "\n",
+    "**OWASP Password Storage Cheat Sheet**\n",
+    "- URL: https://cheatsheetseries.owasp.org/cheatsheets/Password_Storage_Cheat_Sheet.html\n",
+    "- Relevance: Industry best practices for secure password storage, including salting, hashing, and key derivation functions.\n",
+    "\n",
+    "**Wikipedia - Salt (cryptography)**\n",
+    "- URL: https://en.wikipedia.org/wiki/Salt_(cryptography)\n",
+    "- Relevance: Explains how adding random salt prevents rainbow table attacks and makes each password hash unique.\n",
+    "\n",
+    "**Wikipedia - Key derivation function**\n",
+    "- URL: https://en.wikipedia.org/wiki/Key_derivation_function\n",
+    "- Relevance: Describes purpose-built functions like bcrypt and Argon2 designed specifically for password hashing with adjustable computational cost."
    ]
   }
  ],
